--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,10 @@ PUSHER_APP_CLUSTER=mt1
 
 BAIDU_TRANSLATE_APPID=
 BAIDU_TRANSLATE_KEY=
+
+# dingo
+API_STANDARDS_TREE=
+API_SUBTYPE=
+API_VERSION=
+API_PREFIX=
+API_DEBUG=
