--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "jpush/jpush": "^3.6",
         "laravel/framework": "5.5.*",
         "laravel/horizon": "~1.0",
+        "laravel/passport": "~4.0",
         "laravel/tinker": "~1.0",
         "liyu/dingo-serializer-switch": "^0.3.0",
         "mews/captcha": "~2.0",
@@ -23,6 +24,7 @@
         "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/pinyin": "~3.0",
+        "paragonie/random_compat": "^2.0",
         "predis/predis": "~1.0",
         "socialiteproviders/weixin": "^4.0",
         "spatie/laravel-permission": "~2.7",
